# ldd_learn

./: CMakeLists.txt  README.md
chardev/: CMakeLists.txt  chardev.c
hello/: CMakeLists.txt  hello.c
mytun/: CMakeLists.txt  mytun.c  read.md
